cabal-version:      3.0
name:               learn
version:            0.1.0.1
synopsis: Just shawarma
description: Shawarma learning
homepage:           https://orzklv.uz
license:            MIT
license-file:       LICENSE
author:             Orzklv
maintainer:         sakhib@orzklv.uz
category:           Learning
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable learn
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:

    build-depends:
      base  ^>=4.20.0,
      wreq  ^>=0.5.4.3,
      text  ^>=2.0.2,
      aeson ^>=2.2.3.0,
      lens  ^>=5.3.2,
      async ^>=2.2.5,

    hs-source-dirs:   app
    default-language: GHC2021
